k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-backend
  labels:
    app: python-backend

spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-backend
  template:
    metadata:
      labels:
        app: python-backend
    spec:
      containers:
      - name: python-backend
        image: aartemdevops10/python-backend:766b025102540fa863437984f720484a4400a181
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
