k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-backend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  rules:
    - host: devops8.test-danit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-backend-service
                port:
                  number: 80
